<resources>
    <string name="app_name">Toy Robot Simulator</string>
    <string name="place_label">Place:</string>
    <string name="textViewXHint">x</string>
    <string name="textViewYHint">y</string>
    <string name="buttonMove">Move</string>
    <string name="buttonLeft">Left</string>
    <string name="buttonRight">Right</string>
    <string name="buttonReport">Report</string>
    <string name="radioButtonNorth">North</string>
    <string name="radioButtonSouth">South</string>
    <string name="radioButtonEast">East</string>
    <string name="radioButtonWest">West</string>
    <string name="robotNotPlacedError">Please place the robot first</string>
    <string name="reportText">X: %1$d\nY: %2$d\nFacing:%3$s</string>
    <string name="valueCannotBeEmpty">Value cannot be empty</string>
    <string name="placeOutOfBounds">Place out of bounds, cannot set</string>
</resources>
